changes the colors of covers,fixed the remove board bug

--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -12,7 +12,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       user-select: none;
-      &.img{
+      &.img {
          min-height: 150px;
          max-height: 240px;
          object-fit: cover;
@@ -220,7 +220,7 @@
    // display: inline-flex;
    // justify-content: end;
    float: right;
-   margin: 0 -2px 0 0;
+   margin: 0 -6px 0 0;
 }
 
 .member {
